tests/snapshots/yaml_suite_snapshots__yaml_suite_ZL4Z_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid nested mapping
  tags: error mapping
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n   =VAL 'b\n"
  yaml: "---\na: 'b': c\n"
