tests/snapshots/yaml_suite_snapshots__yaml_suite_ZVH3_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Wrong indented sequence item
  from: "@perlpunk"
  tags: error sequence indent
  fail: true
  yaml: "- key: value\n - item1\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP\n    =VAL :key\n    =VAL :value\n   -MAP\n"
