tests/snapshots/yaml_suite_snapshots__yaml_suite_ZVH3_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Wrong indented sequence item
  tags: error sequence indent
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP\n    =VAL :key\n    =VAL :value\n   -MAP\n"
  yaml: "- key: value\n - item1\n"
