tests/snapshots/yaml_suite_snapshots__yaml_suite_ZWK4_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Key with anchor after missing explicit mapping value
  from: "@perlpunk"
  tags: anchor explicit-key mapping
  yaml: "---\na: 1\n? b\n&anchor c: 3\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n   =VAL :1\n   =VAL :b\n   =VAL :\n   =VAL &anchor :c\n   =VAL :3\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": 1,\n  \"b\": null,\n  \"c\": 3\n}\n"
  dump: "---\na: 1\nb:\n&anchor c: 3\n"
