tests/snapshots/yaml_suite_snapshots__yaml_suite_ZWK4_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\na: 1\nb:\n&anchor c: 3\n"
  from: "@perlpunk"
  json: "{\n  \"a\": 1,\n  \"b\": null,\n  \"c\": 3\n}\n"
  name: Key with anchor after missing explicit mapping value
  tags: anchor explicit-key mapping
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n   =VAL :1\n   =VAL :b\n   =VAL :\n   =VAL &anchor :c\n   =VAL :3\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\na: 1\n? b\n&anchor c: 3\n"
