tests/snapshots/yaml_suite_snapshots__yaml_suite_ZXT5_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Implicit key followed by newline and adjacent value
  from: "@perlpunk"
  tags: error flow mapping sequence
  fail: true
  yaml: "[ \"key\"\n  :value ]\n"
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL \"key\n"
