tests/snapshots/yaml_suite_snapshots__yaml_suite_ZXT5_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Implicit key followed by newline and adjacent value
  tags: error flow mapping sequence
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL \"key\n"
  yaml: "[ \"key\"\n  :value ]\n"
